# blurhash-rs

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release-npm.yml  release-python.yml
benchmarks/: bench_python_binding.py  bench_python_original.py  bench_typescript.ts
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/typescript/: Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/typescript/src/: lib.rs
crates/blurhash-core/: Cargo.toml
crates/blurhash-core/benches/: blurhash_bench.rs
crates/blurhash-core/examples/: bench_comparison.rs  bench_vs_wolt.rs  demo.rs
crates/blurhash-core/src/: base83.rs  color.rs  decode_impl.rs  encode_impl.rs  error.rs  gpu.rs  lib.rs  simd.rs
crates/blurhash-core/src/shaders/: decode.wgsl  encode.wgsl
crates/blurhash-core/tests/: integration_tests.rs
docs/: architecture.md  product-requirements.md  test-plan.md
reference/: blurhash_python_original.py
