[package]
name = "blurhash-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "blurhash"
crate-type = ["cdylib"]

[dependencies]
blurhash-core = { path = "../../crates/blurhash-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
