[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "blurhash-rust"
version = "0.1.0"
description = "High-performance BlurHash encoding and decoding, powered by Rust"
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Richard Julius", email = "rjulius23@users.noreply.github.com" },
]
keywords = ["blurhash", "image", "placeholder", "encoding", "decoding", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/rjulius23/blurhash-rs"
Repository = "https://github.com/rjulius23/blurhash-rs"
"Bug Tracker" = "https://github.com/rjulius23/blurhash-rs/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
