[package]
name = "blurhash-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Fast BlurHash encoding/decoding in pure Rust"
readme = "../../README.md"
keywords = ["blurhash", "image", "placeholder", "blur", "encoding"]
categories = ["multimedia::images", "encoding"]

[dependencies]
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "blurhash_bench"
harness = false
